--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,11 @@
   </head>
 
   <body>
+    <nav>
+      <%= link_to "Home", root_path %>
+      <%= link_to "New Restaurant", new_restaurant_path %>
+    </nav>
+
     <%= yield %>
   </body>
 </html>
