--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,14 +1,19 @@
-<h1><%= @restaurant.name %></h1>
-<p><%= @restaurant.address %></p>
-<p><%= @restaurant.category %></p>
-<p><%= @restaurant.phone_number %></p>
+<div class="container">
+  <div class="restaurant-info">
+    <h1><%= @restaurant.name %></h1>
+    <p><%= @restaurant.address %></p>
+    <p><%= @restaurant.category %></p>
+    <p><%= @restaurant.phone_number %></p>
 
-<% @restaurant.reviews.each do |review| %>
-  <div class="review-card">
-    <p><%= review.content %></p>
-    <p><%= review.rating %></p>
+
+    <% @restaurant.reviews.each do |review| %>
+      <div class="review-card">
+        <p><%= review.content %></p>
+        <p><%= review.rating %></p>
+      </div>
+    <% end %>
   </div>
-<% end %>
 
-<%= link_to "Edit", edit_restaurant_path(@restaurant) %>
-<%= link_to "Add review", new_restaurant_review_path(@restaurant, @review) %>
+  <%= link_to "Edit", edit_restaurant_path(@restaurant), class:"button-secondary" %>
+  <%= link_to "Add review", new_restaurant_review_path(@restaurant, @review), class:"button-primary" %>
+</div>
