--- a/app/assets/stylesheets/restaurants.scss
+++ b/app/assets/stylesheets/restaurants.scss
@@ -1,3 +1,58 @@
-// Place all the styles related to the Restaurants controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.button-primary {
+  background-color: #f43939;
+  border: 1px #f43939 solid;
+  border-radius: 4px;
+  padding: 8px 16px;
+  color: white;
+  width: 300px;
+  margin: 10px 0px;
+}
+
+.button-primary:hover {
+  box-shadow: 1px 1px 10px #00000033;
+}
+
+.button-secondary {
+  background-color: white;
+  border-radius: 4px;
+  border: 1px #f43939 solid;
+  padding: 8px 16px;
+  min-width: 300px;
+  color: black;
+  margin: 10px 0px;
+}
+
+.button-secondary:hover {
+  box-shadow: 1px 1px 10px #00000033;
+}
+
+.input-field {
+  border: 1px solid #00000010;
+  border-radius: 4px;
+  margin: 10px;
+  width: 266px;
+  padding: 6px 16px;
+}
+
+.form-container {
+  width: 300px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+.restaurant-card {
+  background-color: white;
+  border-radius: 4px;
+  margin: 10px 0px;
+  padding: 20px;
+  color: black;
+  border: 1px solid #00000010;
+}
+
+.restaurant-card:hover {
+  box-shadow: 1px 1px 10px #00000025;
+}
+
+.restaurant-info {
+  margin: 20px 0px;
+}
