--- a/app/assets/stylesheets/reviews.scss
+++ b/app/assets/stylesheets/reviews.scss
@@ -1,3 +1,8 @@
-// Place all the styles related to the Reviews controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.review-card {
+  background-color: white;
+  padding: 10px;
+  margin: 10px 0px;
+  color: black;
+  border: 1px solid #00000010;
+  border-radius: 4px;
+}
