--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -31,6 +31,18 @@ h1, h2, h3, p {
   color: black;
 }
 
+h1 {
+  margin-bottom: 25px;
+}
+
+h2 {
+  margin-bottom: 15px;
+}
+
+p {
+  margin-bottom: 10px;
+}
+
 .container {
   padding: 0 20px;
   margin: 20px 0px;
