--- a/app/assets/stylesheets/restaurants.scss
+++ b/app/assets/stylesheets/restaurants.scss
@@ -1,3 +1,9 @@
+.index-grid-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 20px;
+}
+
 .button-primary {
   background-color: #f43939;
   border: 1px #f43939 solid;
@@ -15,9 +21,18 @@
 .button-secondary {
   background-color: white;
   border-radius: 4px;
-  border: 1px #f43939 solid;
+  border: 1px #00000033 solid;
   padding: 8px 16px;
   min-width: 300px;
+  color: black;
+  margin: 10px 0px;
+}
+
+.button-small {
+  background-color: white;
+  border-radius: 4px;
+  border: 1px #00000033 solid;
+  padding: 3px 5px;
   color: black;
   margin: 10px 0px;
 }
@@ -43,7 +58,6 @@
 .restaurant-card {
   background-color: white;
   border-radius: 4px;
-  margin: 10px 0px;
   padding: 20px;
   color: black;
   border: 1px solid #00000010;
