--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,13 +1,15 @@
 <div class="container">
   <ul>
-  <% @restaurants.each do |restaurant| %>
-    <div class="restaurant-card">
-      <%= link_to restaurant_path(restaurant) do %>
-        <h2><%= restaurant.name %></h2>
-        <p><%= restaurant.category %></p>
-        <p><%= restaurant.address %></p>
-      <% end %>
-    </div>
-  <% end %>
-  </ul>
+    <div class="index-grid-container">
+    <% @restaurants.each do |restaurant| %>
+      <div class="restaurant-card">
+        <%= link_to restaurant_path(restaurant) do %>
+          <h2><%= restaurant.name %></h2>
+          <p><%= restaurant.category %></p>
+          <p><%= restaurant.address %></p>
+        <% end %>
+      </div>
+    <% end %>
+    </ul>
+  </div>
 </div>
